--- a/config/locales/translations/embeddable_framework.yml
+++ b/config/locales/translations/embeddable_framework.yml
@@ -102,6 +102,16 @@ parts:
       title: "This should be a string that denotes the present day. Time will be the time component for the current day. %()s stands for string and does not need to be translated."
       screenshot: "https://drive.google.com/open?id=1da0oNnWxu93qXO8Gz6RBVfqNjFYPyAqS"
       value: "Today %(time)s"
+  - translation:
+      key: "embeddable_framework.common.notification.oneMessage"
+      title: "A text that displays the number of new messages that were sent by an agent. It can be displayed on buttons, labels, etc."
+      screenshot: "https://drive.google.com/file/d/1GXrDQ6hlpj7UWzCBQWTCwC5HbALdr4Vg/view?usp=sharing"
+      value: "1 new message"
+  - translation:
+      key: "embeddable_framework.common.notification.manyMessages"
+      title: "A text that displays the number of new messages that are ongoing that were sent by an agent. It can be displayed on buttons, labels, etc. If your language has more than one plural use New messages: %(plural_number)s"
+      screenshot: "https://drive.google.com/file/d/1DxPO239aNKnfng4F2auSQceHf3H2ctlr/view?usp=sharing"
+      value: "%(plural_number)s new messages"
 
   # Launcher embed
   - translation:
@@ -640,11 +650,13 @@ parts:
       title: "A button that displays a new message notification. When clicked it brings the user to a chat session in another window"
       screenshot: "https://zendesk.box.com/s/634qfi899tj7f2akkpvlq9pzbvveflyp"
       value: "1 New Message"
+      obsolete: "2018-07-23"
   - translation:
       key: "embeddable_framework.chat.button.manyMessages"
       title: "A button that displays a variable amount of new messages as a notification. When clicked it brings the user to a chat session in another window. If your language has more than one plural use New messages: %(plural_number)s"
       screenshot: "https://zendesk.box.com/s/6ygpe29dvmecfxtrdki787km6yywl3ff"
       value: "%(plural_number)s New Messages"
+      obsolete: "2018-07-23"
   - translation:
       key: "embeddable_framework.chat.chatBox.placeholder.typeMessageHere"
       title: "A placeholder text that is displayed in the chat box when there is no content"
