Add new translation string for aria-label on chat menu iconbutton

--- a/config/locales/translations/embeddable_framework.yml
+++ b/config/locales/translations/embeddable_framework.yml
@@ -1028,6 +1028,10 @@ parts:
       key: "embeddable_framework.navigation.close"
       title: "The link to close the embeddable. Displays at the top right of the widget. If over 5 characters will just display icon (tinyurl.com/p33xnz2)"
       value: "Close"
+  - translation:
+      key: "embeddable_framework.navigation.menu"
+      title: "The button to open chat menu. Displays at the top right of the widget on mobile only. This text is for screen readers, only the icon is visually shown. (tinyurl.com/y8n63eba)"
+      value: "Menu"
 
 # Attachments
   - translation:
