Swap string for select department dropdown

--- a/config/locales/translations/embeddable_framework.yml
+++ b/config/locales/translations/embeddable_framework.yml
@@ -384,6 +384,11 @@ parts:
       screenshot: "https://drive.google.com/file/d/1ZUkCi60UCyGUeED5VavW8WkCrPECbLOx/view?usp=sharing"
       value: "Your profile:"
   - translation:
+      key: "embeddable_framework.chat.form.common.dropdown.chooseDepartment"
+      title: "The default text for the dropdown to select a department in the pre chat form"
+      screenshot: "https://drive.google.com/file/d/15rteLrYRXt68voCQH95er0lLTkADQseY/view?usp=sharing"
+      value: "Choose a Department"
+  - translation:
       key: "embeddable_framework.chat.form.editContact.button.save"
       title: "A button to confirm and save all details placed in a form modal of Edit contact Details"
       screenshot: "https://zendesk.box.com/s/e8rnqew6iwbgu945kln1nkangupp8vbs"
@@ -408,6 +413,7 @@ parts:
       title: "The default text for the dropdown to select a department in the pre chat form"
       screenshot: "https://drive.google.com/open?id=13axYwVNISVpj0eb5_r5EnbtXu-Wzo20m"
       value: "Select department"
+      obsolete: "2018-12-26"
   - translation:
       key: "embeddable_framework.chat.department.offline.label"
       title: "An indicator that a department is offline. The department name will be in the %()s. Do not localize %(department)s"
